# ai4biomed_2025

./: .gitignore  01_tensors.ipynb  02_learning_rate.ipynb  03_data_normalization.ipynb  04_optimizers.ipynb  05_nn_regression.ipynb  06_activation_functions.ipynb  07_overfitting.ipynb  08_batch_dataset_dataloader.ipynb  09_metrics.ipynb  10_sign_mnist_example.ipynb  11_malaria_cells_example.ipynb  README.md  create_zip.sh  hands_on.qmd  hands_on_install.qmd  install.qmd  pyproject.toml
src/adl/: __init__.py  activations.py  cooking.py  metrics.py  model_1p.py  model_2p.py  optimizers.py  sklearn.py  tensors.py  test_install.py
